--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@formspree/react": "^2.2.4",
+    "@google-recaptcha/react": "^1.1.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.1",
@@ -11,9 +12,9 @@
     "@types/node": "^16.7.13",
     "@types/react": "^17.0.20",
     "@types/react-dom": "^17.0.9",
-    "react": "^17.0.2",
+    "react": "^18.3.1",
     "react-animate-on-scroll": "^2.1.5",
-    "react-dom": "^17.0.2",
+    "react-dom": "^18.3.1",
     "react-google-recaptcha": "^2.1.0",
     "react-router-dom": "^6.2.1",
     "react-router-hash-link": "^2.4.3",
